[package]
name = "idlemail"
version = "0.1.0"
authors = ["Markus Ebner <info@ebner-markus.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
signal = "0.7"
time = "0.2"
lettre = { version = "0.10.0-alpha.5", features = [ "smtp-transport", "builder" ] }
# temporary workaround until merge of: https://github.com/async-email/async-imap/pull/41
async-imap = { git = "https://github.com/seijikun/async-imap.git" }
async-std = "1.8.0"
futures = "^0.3"
async-native-tls = "^0.3"
native-tls = "^0.2"
