[package]
name = "idlemail"
version = "0.2.2"
authors = ["Markus Ebner <info@ebner-markus.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
signal = "0.7"
time = "0.3"
lettre = { version = "0.10.0-rc.5", features = [ "smtp-transport", "builder" ] }
async-imap = "0.5"
async-std = "1.11.0"
futures = "^0.3"
async-native-tls = "^0.3"
native-tls = "^0.2"

# Temporary force funty version ( workaround for https://github.com/bitvecto-rs/bitvec/issues/105 )
funty = "=1.1.0"

[dev-dependencies]
test-case = "2"
tempfile = "3.3"
md5 = "0.7"
